added content and logo

--- a/src/components/utils/header/header.css
+++ b/src/components/utils/header/header.css
@@ -1,4 +1,11 @@
 .header {
-    background-color: azure;
-    padding: 2rem;
+  background-color: azure;
+  padding: 2rem;
+}
+
+.header img {
+  max-width: 150px;
+}
+
+.highlight-para {
 }
