--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,16 @@ font-family: 'Source Code Pro', monospace;*/
 
 :root {
   font-family: "Roboto", sans-serif;
-  line-height: 1.5;
   font-weight: 400;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #875d5d;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #875d5d;
 }
 
 button {
@@ -29,7 +28,7 @@ button {
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: #875d5d;
 }
 button:focus,
 button:focus-visible {
