--- a/src/components/utils/jsonViewer/JsonViewer.css
+++ b/src/components/utils/jsonViewer/JsonViewer.css
@@ -1,10 +1,7 @@
 .json-view-wrapper {
   max-width: 920px;
   margin: 0 auto;
-  margin: 1rem;
-}
-
-.json-view-wrapper .title {
+  padding: 2rem;
 }
 
 .json-view {
@@ -30,6 +27,10 @@
 
 .json-view__header button {
   padding: 2px 4px;
+}
+
+.title{
+  font-weight: 600;
 }
 
 /* pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; } */
