--- a/src/components/views/landing/Landing.css
+++ b/src/components/views/landing/Landing.css
@@ -1,3 +1,14 @@
 .logo {
-  max-width: 100px;
+	max-width: 100px;
+}
+
+.title-big {
+	font-size: 1.5rem;
+	padding: 1rem 0;
+	color: #555;
+}
+
+.title {
+	font-size: 1.2rem;
+	margin-bottom: 15px;
 }
