--- a/src/components/utils/jsonViewer/JsonViewer.css
+++ b/src/components/utils/jsonViewer/JsonViewer.css
@@ -1,50 +1,51 @@
 .json-view-wrapper {
-  max-width: 920px;
-  margin: 0 auto;
-  margin: 1rem;
+	max-width: 920px;
+	margin: 0 auto;
+	margin: 1rem;
 }
 
 .json-view-wrapper .title {
 }
 
 .json-view {
-  padding: 1rem;
-  background-color: #f6fafd;
-  border: 1px solid #e2e2e2;
-  border-radius: 5px;
-  position: relative;
+	padding: 1rem;
+	background-color: #f6fafd;
+	border: 1px solid #e2e2e2;
+	border-radius: 5px;
+	position: relative;
+	box-shadow: -1px 2px 8px -2px #ccc;
 }
 
 .json-view pre {
-  font-family: "Source Code Pro", monospace;
-  overflow-x: auto;
-  font-size: 12px;
-  color: #000;
+	font-family: 'Source Code Pro', monospace;
+	overflow-x: auto;
+	font-size: 12px;
+	color: #000;
 }
 
 .json-view__header {
-  position: absolute;
-  right: 10px;
-  top: 10px;
+	position: absolute;
+	right: 10px;
+	top: 10px;
 }
 
 .json-view__header button {
-  padding: 2px 4px;
+	padding: 2px 4px;
 }
 
 /* pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; } */
 .string {
-  color: green;
+	color: green;
 }
 .number {
-  color: darkorange;
+	color: darkorange;
 }
 .boolean {
-  color: blue;
+	color: blue;
 }
 .null {
-  color: magenta;
+	color: magenta;
 }
 .key {
-  color: red;
+	color: red;
 }
